[package]
name = "gwyf-helper"
version = "0.3.0"
authors = ["Camas <camas@users.noreply.github.com>"]
edition = "2021"

[dependencies]
winapi = { version = "*", features = [
    "memoryapi",
    "processthreadsapi",
    "std",
    "tlhelp32",
    "winbase",
] }
kernel32-sys = "*"
injected-dll = { path = "../injected-dll" }
