[package]
name = "injected-dll"
version = "0.3.0"
authors = ["Camas <camas@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "injected_dll"
crate-type = ["cdylib"]

[build-dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies]
winapi = { version = "*", features = [
    "libloaderapi",
    "psapi",
    "processthreadsapi",
    "tlhelp32",
    "winuser",
] }
# hudhook = "*"
hudhook = { git = "https://github.com/camas/hudhook", branch = "input-issue-hack" }
imgui = "*"
log = "*"
simplelog = "*"
dirs = "*"
